<resources>
    <string name="app_name">FireBaseApplication</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_login">Sign in</string>
    <string name="not_a_member">Not a member ? Get registered Now!</string>
</resources>
